

umx 0.70.0
--------------

* Add support for circles as well as lines for residualvariance
* Improve help text. Thanks Mike Neale esp.!
* Improved organization of functions into families in the help.
* Fixed bad example in umx_lower2full()
* Dropped "features" to set endogenous, exogenous, and latents in umxRAM
* Dropped a dozen deprecated functions as no-one reported using them.

umx 0.50.0
--------------

* First CRAN release

umx 0.49.0
--------------

* Ensuring edge cases work
* Improving help files and feedback
* rationalizing fn names into @families

umx 0.45-beta
--------------

* Feature complete
* Bug squashing
* Optimizing fn names for memorability and typing

umx 0.40-beta
--------------

* Beta level!
* Standard confint(); plot() etc functions implemented
* Adding umxRAM() and umxPath shortcuts

umx 0.30-alpha
--------------

* Alpha release
* 90% feature complete
* lots of name rationalization

umx 0.25-alpha
--------------

* Alpha release
* 80% feature complete
* Function prefix reflects usage:: umxMajor, umx_utility_function, xmuNotForUser