@@ -33,6 +33,12 @@
 }
 \description{
 Create graphical path diagrams from your OpenMx models!
+\emph{Note:} On systems with Word installed, a \sQuote{.dot} file extension gets opened (uselessly) by M$ wurd.
+You may, therefore, need to set the default app for .dot to Graphviz.
+}
+\details{
+On mac, get info, choose \dQuote{open with}, select Graphviz.app (or omnigraffle professional),
+then set \dQuote{change all}.
 }
 \examples{
 \dontrun{
